[metadata]
name = paeiou
version = 0.0.7
author = quildtide
author_email = quildtide@gmail.com
description = Planetary Annihilation Extension Interface on Units, an interface for quickly adding units to Planetary Annihilation mods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DAEDALUS-Modding/pa-extension-interface-on-units
project_urls =
    Bug Tracker = https://github.com/DAEDALUS-Modding/pa-extension-interface-on-units/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src